--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Modal</title>
+    <title>Modal</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <style>
        .modal-header {
         background-color: chocolate;
         color: white;
+       }
+
+       .required::after{
+        content: "*";
+        color: red;
        }
     </style>
 
@@ -26,19 +31,23 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div>
-                            <label class="form-label">Name</label>
+                        <div class="mb-3">
+                            <label class="form-label required">Name</label>
                             <input type="text" class="form-control">
                         </div>
-                        <div>
-                            <label class="form-label">Email</label>
+                        <div class="mb-3">
+                            <label class="form-label required">Email</label>
                             <input type="email" class="form-control">
                         </div>
-                        <div>
-                            <label class="form-label">Type your message here</label>
+                        <div class="mb-3">
+                            <label class="form-label required">Type your message here</label>
                             <textarea class="form-control"></textarea>
                         </div>
                     </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
          </div>
